trying to fix odin dependency

--- a/JichaelsCore/Runtime/Jichaels.Core.asmdef
+++ b/JichaelsCore/Runtime/Jichaels.Core.asmdef
@@ -8,7 +8,7 @@
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "Sirenix.OdinInspector.Attributes.dll"
+        "Jichaels.Sirenix.OdinInspector.Attributes.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": [],
