--- a/JichaelsVR/package.json
+++ b/JichaelsVR/package.json
@@ -8,6 +8,7 @@
     "com.unity.inputsystem": "1.0.0-preview.6",
     "com.unity.xr.management": "3.0.6",
     "com.jichaels.core": "1.0.0",
+    "com.jichaels.localization": "1.0.0",
     "com.unity.textmeshpro": "3.0.0-preview.7",
     "com.unity.animation.rigging": "0.3.3-preview"
   },
