--- a/JichaelsCore/Editor/Jichaels.Core.Editor.asmdef
+++ b/JichaelsCore/Editor/Jichaels.Core.Editor.asmdef
@@ -8,8 +8,10 @@
     ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": [],
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "Jichaels.Sirenix.OdinInspector.Attributes.dll"
+    ],
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
