trying to fix odin

--- a/JichaelsCore/Editor/Jichaels.Core.Editor.asmdef
+++ b/JichaelsCore/Editor/Jichaels.Core.Editor.asmdef
@@ -8,10 +8,8 @@
     ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": true,
-    "precompiledReferences": [
-        "Jichaels.Sirenix.OdinInspector.Attributes.dll"
-    ],
+    "overrideReferences": false,
+    "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
