--- a/JichaelsCore/Runtime/Jichaels.Core.asmdef
+++ b/JichaelsCore/Runtime/Jichaels.Core.asmdef
@@ -7,9 +7,7 @@
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
-    "precompiledReferences": [
-        "Jichaels.Sirenix.OdinInspector.Attributes.dll"
-    ],
+    "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
