--- a/JichaelsCore/Runtime/Jichaels.Core.asmdef
+++ b/JichaelsCore/Runtime/Jichaels.Core.asmdef
@@ -6,7 +6,7 @@
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": true,
+    "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
